@@ -30,6 +30,7 @@ extern bool cleanup_cache( const std::string &basedir );
 extern size_t setup_env_cache(const std::string &basedir,
                      std::string &native_environment, uid_t nobody_uid, gid_t nobody_gid);
 Environments available_environmnents(const std::string &basename);
+extern bool native_env_uptodate();
 extern pid_t start_install_environment( const std::string &basename,
                             const std::string &target,
                             const std::string &name,
@@ -39,5 +40,6 @@ extern pid_t start_install_environment( const std::string &basename,
 extern size_t finalize_install_environment( const std::string &basename, const std::string& target,
         pid_t pid, gid_t nobody_gid );
 extern size_t remove_environment( const std::string &basedir, const std::string &env);
+extern size_t remove_native_environment( const std::string &basedir, const std::string &env );
 
 #endif
