@@ -4,6 +4,7 @@
   Clang with -Wp,-rewrite-includes option is recommended (3.2+ or patched).
 - support 'icecc <compilername>' properly
 - try to avoid compiling on the local machine if it is busy
+- do not use old compiler if it was changed while icecream daemon was running
 
 0.9.7 (1232780)
 - bug fix for -MD and -MF
